--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^20.19.27",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "sass": "^1.97.1",
     "typescript": "^5.9.3"
   }
 }
