--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "private": true,
   "dependencies": {
     "@aws-sdk/client-s3": "^3.958.0",
+    "dayjs": "^1.11.19",
+    "gray-matter": "^4.0.3",
     "next": "16.1.1",
+    "next-mdx-remote": "^5.0.0",
+    "next-seo": "^6.8.0",
+    "podcast": "^2.0.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
